# veschov

./: Agents.md  README.md  fix_json.py  main-app.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: pages.toml
assets/: logs-hausreport-veschov-main-src-veschov-app.py-2026-01-12T15_18_50.273Z.txt  officer_names.json
crap/: 3_Combatant_Info.py  8_Critical_Hit_Analysis.py  CombatantInfoReport.py  CritHitReport.py
src/veschov/: app.py  columns.py  report_charts.py  report_ranges.py
src/veschov.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/veschov/builder/: BuilderState.py  Constants.py  CopyUrlButtons.py  Serialization.py
src/veschov/crap/: apex_barrier_poc.py  damage_flow_sankey_report.py  helpers.py  officers_and_tech_report.py  state.py
src/veschov/io/: AbstractSectionParser.py  BattleSectionParser.py  FleetSectionParser.py  LootSectionParser.py  PlayerSectionParser.py  SessionInfo.py  ShipSpecifier.py  StartsWhen.py  __init__.py  columns.py  parser_stub.py
src/veschov/pages/: 0_Home.py  10_Attacker_Shot_Heatmaps.py  11_Builder.py  12_Log_File_Explorer.py  2_Apex_Barrier_Analysis.py  2_Observed_Mitigation.py  3_Combatant_Info.py  3_Observed_Shield_Mitigation.py  4_Actual_Damage_Pools.py  4_Damage_Flow_By_Round.py  5_Raw_Damage_Analysis.py  6_Officers_and_Tech.py  (+7 more)
tests/: helpers.py  test1.py  test_all_officer_names.py  test_alliance_names.py  test_attacker_target_selector_streamlit.py  test_attacker_target_state_manager.py  test_bridge_officer_names.py  test_combat_lens_proc_filter.py  test_combatant_info_selection_streamlit.py  test_combatant_names.py  test_firing_suppression.py  test_get_every_ship.py  test_outcome_lookup.py  test_player_enemy_roster.py  test_player_rows.py  test_player_rows_2.py  test_player_rows_fallback_counts.py  test_section_parser_normalization.py  test_session_info.py  test_session_info_filters.py  test_ship_names.py  test_system_time_rounds.py
tests/logs/: 1.csv  2-outpost-retal.csv  3-armada.csv  4-partial.csv  5-kren.csv
veschov/: .gitignore
(+64 files in other folders)
